examples/test/testpolicy19391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19391
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key24: value1
      key38: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value46
          key31: value46
      podSelector:
        matchLabels:
          key4: value7
